--- a/servoo_logistic/views/operation_view.xml
+++ b/servoo_logistic/views/operation_view.xml
@@ -49,7 +49,7 @@
                         </div>
                         <group>
                             <group col="4">
-                                <field name="name" readonly="0" colspan="4"/>
+                                <field name="name" readonly="1" colspan="4"/>
                                 <field name="partner_id" widget="res_partner_many2one" context="{'show_address': 1, 'show_vat': True}" options='{"always_reload": True}' colspan="4"/>
                                 <field name="operation_nature" required="1" colspan="4" />
                                 <field name="external_reference" colspan="4"/>
@@ -131,6 +131,11 @@
 <!--                                    </field>-->
 <!--                                </page>-->
                             </notebook>
+                            <div class="oe_chatter">
+                                <field name="message_follower_ids"/>
+                                <field name="activity_ids"/>
+                                <field name="message_ids"/>
+                            </div>
                     </sheet>
                 </form>
             </field>
