--- a/servoo_transit/views/formality_view.xml
+++ b/servoo_transit/views/formality_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <data>
-        <record model="ir.ui.view" id="view_servoo_logistic_formality_tree">
+        <record model="ir.ui.view" id="view_servoo_transit_formality_tree">
             <field name="name">view.formality.tree</field>
-            <field name="model">servoo.logistic.formality</field>
+            <field name="model">servoo.transit.formality</field>
             <field name="arch" type="xml">
                 <tree string="Formalities" decoration-success="state=='done'" decoration-muted="state=='cancel'">
                     <field name="service_id" />
@@ -12,21 +12,21 @@
                     <field name="start_date" />
                     <field name="end_date" />
                     <field name="amount" />
-                    <field name="operation_id" />
+                    <field name="order_id" />
                     <field name="agent_id" />
                     <field name="state" />
                 </tree>
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_servoo_logistic_formality_form">
+        <record model="ir.ui.view" id="view_servoo_transit_formality_form">
             <field name="name">view.formality.form</field>
-            <field name="model">servoo.logistic.formality</field>
+            <field name="model">servoo.transit.formality</field>
             <field name="arch" type="xml">
                 <form string="Formality">
                     <header>
                         <button name="action_done" states="open" type="object" string="Done"/>
-                        <button name="action_open" states="cancel" type="object" string="Open" groups="servoo_logistic.logistic_group_manager"/>
+                        <button name="action_open" states="cancel" type="object" string="Open" groups="servoo_transit.transit_group_manager"/>
                         <button name="action_cancel" states="open,done" type="object" string="Cancel"/>
                         <field name="state" widget="statusbar" statusbar_visible="open,done"/>
                     </header>
@@ -38,7 +38,7 @@
                                 <field name="other_reference" />
                                 <field name="administration_id" required="1" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
                                 <field name="amount" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
-                                <field name="operation_id" required="1" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
+                                <field name="order_id" required="1" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
                                 <field name="agent_id" />
                             </group>
                             <group col="4">
@@ -59,7 +59,7 @@
         <record model="ir.actions.act_window" id="action_formalities">
             <field name="name">Formalities</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">servoo.logistic.formality</field>
+            <field name="res_model">servoo.transit.formality</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
             <field name="domain">[]</field>
@@ -73,7 +73,7 @@
 
         <record id="view_formality_type_tree" model="ir.ui.view">
             <field name="name">view.formality.type.tree</field>
-            <field name="model">servoo.logistic.formality.type</field>
+            <field name="model">servoo.transit.formality.type</field>
             <field name="arch" type="xml">
                 <tree string="Formalities Type" editable="bottom">
                     <field name="name" />
@@ -84,7 +84,7 @@
 
         <record model="ir.actions.act_window" id="action_formality_type">
             <field name="name">Formalities type</field>
-            <field name="res_model">servoo.logistic.formality.type</field>
+            <field name="res_model">servoo.transit.formality.type</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree</field>
         </record>
