--- a/servoo_shipping/report/shipping_delivery_order_report.xml
+++ b/servoo_shipping/report/shipping_delivery_order_report.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="action_report_pda" model="ir.actions.report">
-            <field name="name">PRO-FORMA DISBURSEMENT ACCOUNT</field>
-            <field name="model">servoo.shipping.pda</field>
+        <record id="action_report_delivery_order" model="ir.actions.report">
+            <field name="name">Delivery Order</field>
+            <field name="model">servoo.shipping.delivery.order</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">servoo_shipping.report_pda</field>
-            <field name="report_file">servoo_shipping.report_pda</field>
-            <field name="print_report_name">'PDA - %s' % (object.name)</field>
-            <field name="binding_model_id" ref="model_servoo_shipping_pda"/>
+            <field name="report_name">servoo_shipping.report_delivery_order</field>
+            <field name="report_file">servoo_shipping.report_delivery_order</field>
+            <field name="print_report_name">'%s - %s' % (object.name, object.bl_id.name)</field>
+            <field name="binding_model_id" ref="model_servoo_shipping_delivery_order"/>
             <field name="binding_type">report</field>
         </record>
     </data>
