--- a/servoo_shipping/report/shipping_delivery_order_report_templates.xml
+++ b/servoo_shipping/report/shipping_delivery_order_report_templates.xml
@@ -1,179 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-<template id="report_pda_document">
+<template id="report_delivery_order_document">
     <t t-call="web.external_layout">
-        <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
-        <t t-set="forced_vat" t-value="doc.fiscal_position_id.foreign_vat"/> <!-- So that it appears in the footer of the report instead of the company VAT if it's set -->
-        <t t-set="address">
-            <div t-field="doc.partner_id"
-                t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
-            <p t-if="doc.partner_id.vat"><t t-esc="doc.company_id.account_fiscal_country_id.vat_label or 'Tax ID'"/>: <span t-field="doc.partner_id.vat"/></p>
-        </t>
-        <t t-if="doc.partner_shipping_id == doc.partner_invoice_id
-                             and doc.partner_invoice_id != doc.partner_id
-                             or doc.partner_shipping_id != doc.partner_invoice_id">
-            <t t-set="information_block">
-                <strong t-if="doc.partner_shipping_id == doc.partner_invoice_id">Invoicing and Shipping Address:</strong>
-                <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing Address:</strong>
-                <div t-field="doc.partner_invoice_id"
-                t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
-                <t t-if="doc.partner_shipping_id != doc.partner_invoice_id">
-                    <strong>Shipping Address:</strong>
-                    <div t-field="doc.partner_shipping_id"
-                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
-                </t>
-            </t>
-        </t>
+        <t t-set="doc" t-value="doc.with_context(lang=doc.consignee_id.lang)" />
+
         <div class="page">
             <div class="oe_structure"/>
 
-            <h2 class="mt16">
-                <span>PDA # </span>
-                <span t-field="doc.name"/>
-            </h2>
-
-            <div class="row mt32 mb32" id="informations">
-                <div t-if="doc.client_order_ref" class="col-auto col-3 mw-100 mb-2">
-                    <strong>Your Reference:</strong>
-                    <p class="m-0" t-field="doc.client_order_ref"/>
-                </div>
-                <div t-if="doc.date_pda" class="col-auto col-3 mw-100 mb-2">
-                    <strong>Date:</strong>
-                    <p class="m-0" t-field="doc.date_pda" t-options='{"widget": "date"}'/>
-                </div>
-                <div t-if="doc.vessel_id" class="col-auto col-3 mw-100 mb-2">
-                    <strong>VESSEL'S NAME:</strong>
-                    <p class="m-0" t-field="doc.vessel_id.name"/>
-                </div>
-                <div t-if="doc.eta" class="col-auto col-3 mw-100 mb-2">
-                    <strong>E T A:</strong>
-                    <p class="m-0" t-field="doc.eta" t-options='{"widget": "date"}'/>
-                </div>
-                <div t-if="doc.number_of_days" class="col-auto col-3 mw-100 mb-2">
-                    <strong>NO DAYS:</strong>
-                    <p class="m-0" t-field="doc.number_of_days"/>
-                </div>
-                 <div t-if="doc.grt" class="col-auto col-3 mw-100 mb-2">
-                    <strong>G R T:</strong>
-                    <p class="m-0" t-field="doc.grt"/>
-                </div>
-                <div t-if="doc.cbm_vessel" class="col-auto col-3 mw-100 mb-2">
-                    <strong>CBM VESSEL:</strong>
-                    <p class="m-0" t-field="doc.cbm_vessel"/>
-                </div>
-                <div t-if="doc.tonnage_of_goods" class="col-auto col-3 mw-100 mb-2">
-                    <span><strong><span t-field="doc.operation_type"/> CARGO - CBM:</strong></span>
-                    <p class="m-0" t-field="doc.tonnage_of_goods"/>
-                </div>
-            </div>
-
-            <!-- Is there a discount on at least one line? -->
-            <t t-set="display_discount" t-value="any(l.discount for l in doc.shipping_pda_line)"/>
-
-            <table class="table table-sm o_main_table">
-                <!-- In case we want to repeat the header, remove "display: table-row-group" -->
-                <thead style="display: table-row-group">
-                    <tr>
-                        <th name="th_description" class="text-left">Description</th>
-                        <th name="th_quantity" class="text-right">Quantity</th>
-                        <th name="th_priceunit" class="text-right">Unit Price</th>
-                        <th name="th_discount" t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
-                            <span>Disc.%</span>
-                        </th>
-                        <th name="th_taxes" class="text-right">Taxes</th>
-                        <th name="th_subtotal" class="text-right">
-                            <span groups="account.group_show_line_subtotals_tax_excluded">Amount</span>
-                            <span groups="account.group_show_line_subtotals_tax_included">Total Price</span>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody class="sale_tbody">
-
-                    <t t-set="current_subtotal" t-value="0"/>
-
-                    <t t-foreach="doc.shipping_pda_line" t-as="line">
-
-                        <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
-                        <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
-
-                        <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
-                            <t t-if="not line.display_type">
-                                <td name="td_name"><span t-field="line.name"/></td>
-                                <td name="td_quantity" class="text-right">
-                                    <span t-field="line.product_uom_qty"/>
-<!--                                    <span t-field="line.product_uom"/>-->
-                                </td>
-                                <td name="td_priceunit" class="text-right">
-                                    <span t-field="line.price_unit"/>
-                                </td>
-                                <td t-if="display_discount" class="text-right" groups="product.group_discount_per_so_line">
-                                    <span t-field="line.discount"/>
-                                </td>
-                                <td name="td_taxes" class="text-right">
-                                    <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_id))"/>
-                                </td>
-                                <td name="td_subtotal" class="text-right o_price_total">
-                                    <span t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
-                                    <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
-                                </td>
-                            </t>
-                            <t t-if="line.display_type == 'line_section'">
-                                <td name="td_section_line" colspan="99">
-                                    <span t-field="line.name"/>
-                                </td>
-                                <t t-set="current_section" t-value="line"/>
-                                <t t-set="current_subtotal" t-value="0"/>
-                            </t>
-                            <t t-if="line.display_type == 'line_note'">
-                                <td name="td_note_line" colspan="99">
-                                    <span t-field="line.name"/>
-                                </td>
-                            </t>
-                        </tr>
-
-                        <t t-if="current_section and (line_last or doc.shipping_pda_line[line_index+1].display_type == 'line_section')">
-                            <tr class="is-subtotal text-right">
-                                <td name="td_section_subtotal" colspan="99">
-                                    <strong class="mr16">Subtotal</strong>
-                                    <span
-                                        t-esc="current_subtotal"
-                                        t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
-                                    />
-                                </td>
-                            </tr>
-                        </t>
-                    </t>
-                </tbody>
-            </table>
-
-            <div class="clearfix" name="so_total_summary">
-                <div id="total" class="row" name="total">
-                    <div t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'} ml-auto">
-                        <table class="table table-sm">
-                            <!-- Tax totals -->
-                            <t t-set="tax_totals" t-value="json.loads(doc.tax_totals_json)"/>
-                            <t t-call="account.document_tax_totals"/>
-                        </table>
-                    </div>
-                </div>
-            </div>
-
+            <h1 class="mt16">
+                <span>DELIVERY ORDER</span>
+            </h1>
             <div class="oe_structure"/>
 
-            <p t-field="doc.note" />
-            <p t-if="not is_html_empty(doc.payment_term_id.note)">
-                <span t-field="doc.payment_term_id.note"/>
+            <p>
+                <span t-field="doc.name"/>
+                <p>Date: <span t-field="doc.date"/></p>
             </p>
-
+            <div class="oe_structure"/>
+            <p>Customer: <b><span t-field="doc.consignee_id.name" /> </b></p>
+            <p>Address: <b><t t-if="doc.consignee_id.zip">BP <span t-field="doc.consignee_id.zip" /> </t><span t-field="doc.consignee_id.city" />, <span t-field="doc.consignee_id.country_id.name" /> </b></p>
+            <div class="oe_structure"/>
+            <p>M/V...<b><span t-field="doc.vessel_id.name" /></b> DATE OF ARRIVAL:</p>
+            <p>Port of Loading: <b><span t-field="doc.loading_port.name" />, <span t-field="doc.loading_port.country_id.name" /> </b></p>
+            <p>Final Destination: <b><span t-field="doc.discharge_port.name" />, <span t-field="doc.discharge_port.country_id.name" /> </b></p>
+            <p>B/L N°: <b><span t-field="doc.bl_id.name" /> </b> N° of packages: <b><span t-field="doc.goods_description" /></b> </p>
+            <div class="oe_structure"/>
+            <p>Customs Declaration N°: <b><span t-field="doc.custom_declaration_reference"/> OF <span t-field="doc.custom_declaration_date"/></b></p>
+            <p>Open yard / Warehouse: <b><span t-field="doc.warehouse"/></b></p>
+           <div class="oe_structure"/>
+            <p>
+                <b>Validity: <span t-field="doc.validity_date"/></b>
+            </p>
         </div>
     </t>
 </template>
 
 
-<template id="report_pda">
+<template id="report_delivery_order">
     <t t-call="web.html_container">
         <t t-foreach="docs" t-as="doc">
-            <t t-call="servoo_shipping.report_pda_document" t-lang="doc.partner_id.lang"/>
+            <t t-call="servoo_shipping.report_delivery_order_document" t-lang="doc.consignee_id.lang"/>
         </t>
     </t>
 </template>
