--- a/servoo_shipping/report/shipping_pda_report_templates.xml
+++ b/servoo_shipping/report/shipping_pda_report_templates.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-<template id="report_saleorder_document">
+<template id="report_pda_document">
     <t t-call="web.external_layout">
         <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
         <t t-set="forced_vat" t-value="doc.fiscal_position_id.foreign_vat"/> <!-- So that it appears in the footer of the report instead of the company VAT if it's set -->
@@ -28,13 +28,7 @@
             <div class="oe_structure"/>
 
             <h2 class="mt16">
-                <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
-                    <span t-if="doc.state not in ['draft','sent']">Order # </span>
-                    <span t-if="doc.state in ['draft','sent']">Quotation # </span>
-                </t>
-                <t t-if="env.context.get('proforma', False) or is_pro_forma">
-                    <span>Pro-Forma Invoice # </span>
-                </t>
+                <span>PDA # </span>
                 <span t-field="doc.name"/>
             </h2>
 
@@ -43,26 +37,38 @@
                     <strong>Your Reference:</strong>
                     <p class="m-0" t-field="doc.client_order_ref"/>
                 </div>
-                <div t-if="doc.date_order and doc.state not in ['draft','sent']" class="col-auto col-3 mw-100 mb-2">
-                    <strong>Order Date:</strong>
-                    <p class="m-0" t-field="doc.date_order"/>
+                <div t-if="doc.date_pda" class="col-auto col-3 mw-100 mb-2">
+                    <strong>Date:</strong>
+                    <p class="m-0" t-field="doc.date_pda" t-options='{"widget": "date"}'/>
                 </div>
-                <div t-if="doc.date_order and doc.state in ['draft','sent']" class="col-auto col-3 mw-100 mb-2">
-                    <strong>Quotation Date:</strong>
-                    <p class="m-0" t-field="doc.date_order" t-options='{"widget": "date"}'/>
+                <div t-if="doc.vessel_id" class="col-auto col-3 mw-100 mb-2">
+                    <strong>VESSEL'S NAME:</strong>
+                    <p class="m-0" t-field="doc.vessel_id.name"/>
                 </div>
-                <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" class="col-auto col-3 mw-100 mb-2" name="expiration_date">
-                    <strong>Expiration:</strong>
-                    <p class="m-0" t-field="doc.validity_date"/>
+                <div t-if="doc.eta" class="col-auto col-3 mw-100 mb-2">
+                    <strong>E T A:</strong>
+                    <p class="m-0" t-field="doc.eta" t-options='{"widget": "date"}'/>
                 </div>
-                <div t-if="doc.user_id.name" class="col-auto col-3 mw-100 mb-2">
-                    <strong>Salesperson:</strong>
-                    <p class="m-0" t-field="doc.user_id"/>
+                <div t-if="doc.number_of_days" class="col-auto col-3 mw-100 mb-2">
+                    <strong>NO DAYS:</strong>
+                    <p class="m-0" t-field="doc.number_of_days"/>
+                </div>
+                 <div t-if="doc.grt" class="col-auto col-3 mw-100 mb-2">
+                    <strong>G R T:</strong>
+                    <p class="m-0" t-field="doc.grt"/>
+                </div>
+                <div t-if="doc.cbm_vessel" class="col-auto col-3 mw-100 mb-2">
+                    <strong>CBM VESSEL:</strong>
+                    <p class="m-0" t-field="doc.cbm_vessel"/>
+                </div>
+                <div t-if="doc.tonnage_of_goods" class="col-auto col-3 mw-100 mb-2">
+                    <span><strong><span t-field="doc.operation_type"/> CARGO - CBM:</strong></span>
+                    <p class="m-0" t-field="doc.tonnage_of_goods"/>
                 </div>
             </div>
 
             <!-- Is there a discount on at least one line? -->
-            <t t-set="display_discount" t-value="any(l.discount for l in doc.order_line)"/>
+            <t t-set="display_discount" t-value="any(l.discount for l in doc.shipping_pda_line)"/>
 
             <table class="table table-sm o_main_table">
                 <!-- In case we want to repeat the header, remove "display: table-row-group" -->
@@ -85,7 +91,7 @@
 
                     <t t-set="current_subtotal" t-value="0"/>
 
-                    <t t-foreach="doc.order_line" t-as="line">
+                    <t t-foreach="doc.shipping_pda_line" t-as="line">
 
                         <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                         <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
@@ -95,7 +101,7 @@
                                 <td name="td_name"><span t-field="line.name"/></td>
                                 <td name="td_quantity" class="text-right">
                                     <span t-field="line.product_uom_qty"/>
-                                    <span t-field="line.product_uom"/>
+<!--                                    <span t-field="line.product_uom"/>-->
                                 </td>
                                 <td name="td_priceunit" class="text-right">
                                     <span t-field="line.price_unit"/>
@@ -125,13 +131,13 @@
                             </t>
                         </tr>
 
-                        <t t-if="current_section and (line_last or doc.order_line[line_index+1].display_type == 'line_section')">
+                        <t t-if="current_section and (line_last or doc.shipping_pda_line[line_index+1].display_type == 'line_section')">
                             <tr class="is-subtotal text-right">
                                 <td name="td_section_subtotal" colspan="99">
                                     <strong class="mr16">Subtotal</strong>
                                     <span
                                         t-esc="current_subtotal"
-                                        t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'
+                                        t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
                                     />
                                 </td>
                             </tr>
@@ -152,49 +158,25 @@
                 </div>
             </div>
 
-            <div t-if="doc.signature" class="mt32 ml64 mr4" name="signature">
-                <div class="offset-8">
-                    <strong>Signature</strong>
-                </div>
-                <div class="offset-8">
-                    <img t-att-src="image_data_uri(doc.signature)" style="max-height: 4cm; max-width: 8cm;"/>
-                </div>
-                <div class="offset-8 text-center">
-                    <p t-field="doc.signed_by"/>
-                </div>
-            </div>
-
             <div class="oe_structure"/>
 
             <p t-field="doc.note" />
             <p t-if="not is_html_empty(doc.payment_term_id.note)">
                 <span t-field="doc.payment_term_id.note"/>
             </p>
-            <p id="fiscal_position_remark" t-if="doc.fiscal_position_id and not is_html_empty(doc.fiscal_position_id.sudo().note)">
-                <strong>Fiscal Position Remark:</strong>
-                <span t-field="doc.fiscal_position_id.sudo().note"/>
-            </p>
+
         </div>
     </t>
 </template>
 
 
-<template id="report_saleorder">
+<template id="report_pda">
     <t t-call="web.html_container">
         <t t-foreach="docs" t-as="doc">
-            <t t-call="sale.report_saleorder_document" t-lang="doc.partner_id.lang"/>
+            <t t-call="servoo_shipping.report_pda_document" t-lang="doc.partner_id.lang"/>
         </t>
     </t>
 </template>
 
-<template id="report_saleorder_pro_forma">
-    <t t-call="web.html_container">
-        <t t-set="is_pro_forma" t-value="True"/>
-        <t t-set="docs" t-value="docs.with_context(proforma=True)"/>
-        <t t-foreach="docs" t-as="doc">
-            <t t-call="sale.report_saleorder_document" t-lang="doc.partner_id.lang"/>
-        </t>
-    </t>
-</template>
 
 </odoo>
