--- a/servoo_shipping/views/document_view.xml
+++ b/servoo_shipping/views/document_view.xml
@@ -3,7 +3,7 @@
     <data>
         <record model="ir.ui.view" id="view_document_type_tree">
             <field name="name">view.document.type.tree</field>
-            <field name="model">servoo.transit.document.type</field>
+            <field name="model">servoo.shipping.document.type</field>
             <field name="arch" type="xml">
                 <tree string="Documents Type" editable="bottom">
                     <field name="name" />
@@ -14,7 +14,7 @@
 
         <record model="ir.actions.act_window" id="action_document_type">
             <field name="name">Documents Type</field>
-            <field name="res_model">servoo.transit.document.type</field>
+            <field name="res_model">servoo.shipping.document.type</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree</field>
         </record>
@@ -22,12 +22,12 @@
 
         <record model="ir.ui.view" id="view_document_tree">
             <field name="name">view.document.tree</field>
-            <field name="model">servoo.transit.document</field>
+            <field name="model">servoo.shipping.document</field>
             <field name="arch" type="xml">
                 <tree string="Documents">
                     <field name="name" />
                     <field name="document_type_id" />
-                    <field name="order_id" />
+                    <field name="file_id" />
                     <field name="create_uid" />
                     <field name="create_date" />
                 </tree>
@@ -36,7 +36,7 @@
 
         <record model="ir.ui.view" id="view_document_form">
             <field name="name">view.document.form</field>
-            <field name="model">servoo.transit.document</field>
+            <field name="model">servoo.shipping.document</field>
             <field name="arch" type="xml">
                 <form string="Document">
                     <sheet>
@@ -44,7 +44,7 @@
                             <group>
                                 <field name="name" />
                                 <field name="document_type_id" />
-                                <field name="order_id" />
+                                <field name="file_id" />
                             </group>
                             <group>
                                 <field name="create_uid" readonly="1" />
@@ -63,7 +63,7 @@
 
         <record model="ir.actions.act_window" id="action_documents">
             <field name="name">Documents</field>
-            <field name="res_model">servoo.transit.document</field>
+            <field name="res_model">servoo.shipping.document</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
