--- a/servoo_transit/views/transit_order_view.xml
+++ b/servoo_transit/views/transit_order_view.xml
@@ -206,5 +206,22 @@
                 </form>
             </field>
         </record>
+<!--        Operation sub type-->
+        <record model="ir.ui.view" id="view_operation_sub_type_tree">
+            <field name="name">operation.sub.type.tree</field>
+            <field name="model">servoo.transit.operation.sub.type</field>
+            <field name="arch" type="xml">
+                <tree string="Operation sub type" editable="top">
+                    <field name="name" />
+                    <field name="operation_type" />
+                </tree>
+            </field>
+        </record>
+        <record model="ir.actions.act_window" id="action_operation_sub_type">
+            <field name="name">Sub Type</field>
+            <field name="res_model">servoo.transit.operation.sub.type</field>
+            <field name="view_mode">tree</field>
+            <field name="type">ir.actions.act_window</field>
+        </record>
     </data>
 </odoo>
