Désactivation de la contrainte d'unicité sur le code de la nature d'opération Ajout des ACL pour les profils de la logistique Réorganisation de la vue tree de l'opération logistique Pris en compte de la description du service dans les lignes de formalités et la tva

--- a/servoo_logistic/views/formality_view.xml
+++ b/servoo_logistic/views/formality_view.xml
@@ -38,6 +38,8 @@
                                 <field name="other_reference" />
                                 <field name="administration_id" required="1" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
                                 <field name="amount" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
+                                <field name="tax_id" widget="many2many_tags" options="{'no_create': True}" context="{'search_view_ref': 'account.account_tax_view_search'}" domain="[('type_tax_use','=','sale')]"
+                                                attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
                                 <field name="operation_id" required="1" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}"/>
                                 <field name="agent_id" />
                             </group>
