--- a/servoo_logistic/views/operation_view.xml
+++ b/servoo_logistic/views/operation_view.xml
@@ -70,13 +70,18 @@
             <field name="arch" type="xml">
                 <form string="Operation">
                     <header>
-                        <button name="action_open" states="draft" type="object" string="Validate"/>
-                        <button name="action_done" states="open" type="object" string="Done"/>
+                        <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_logistic.logistic_group_user"/>
+                        <button name="action_done" states="open" type="object" string="Done" groups="servoo_logistic.logistic_group_user"/>
                         <button name="create_invoices" string="Create Invoice"
-                        type="object" class="btn-primary" data-hotkey="q"
+                        type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
                         attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','&gt;=',1)]}"/>
+
+                        <button name="create_invoices" string="Create Invoice"
+                        type="object" data-hotkey="q" groups="account.group_account_invoice"
+                        attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','=',0)]}"/>
+
                         <button name="action_draft" states="cancel" type="object" string="Open" groups="servoo_logistic.logistic_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel"/>
+                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_logistic.logistic_group_user"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
@@ -200,5 +205,20 @@
                 </p>
             </field>
         </record>
+
+         <record id="action_operations_to_invoice" model="ir.actions.act_window">
+            <field name="name">Operations</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.logistic.operation</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    There is no logistic operation to invoice!
+                </p>
+            </field>
+        </record>
+
     </data>
 </odoo>
