--- a/servoo_shipping/views/shipping_file_view.xml
+++ b/servoo_shipping/views/shipping_file_view.xml
@@ -27,14 +27,19 @@
             <field name="arch" type="xml">
                 <form string="shipping file">
                     <header>
-                        <button name="action_open" states="draft" type="object" string="Validate"/>
-                        <button name="action_done" states="open" type="object" string="Done"/>
+                        <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_shipping.shipping_group_user"/>
+                        <button name="action_done" states="open" type="object" string="Done" groups="servoo_shipping.shipping_group_user"/>
                         <button name="create_invoices" string="Create Invoice"
-                                type="object" class="btn-primary" data-hotkey="q"
+                                type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
                                 attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','&gt;=',1)]}"/>
+
+                        <button name="create_invoices" string="Create Invoice"
+                                type="object" data-hotkey="q" groups="account.group_account_invoice"
+                                attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','=',0)]}"/>
+
                         <button name="action_draft" states="cancel" type="object" string="Open"
                                 groups="servoo_shipping.shipping_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel"/>
+                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_shipping.shipping_group_user"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
@@ -49,7 +54,7 @@
                             </button>
                             <button name="generate_xml_file" type="object" class="oe_stat_button"
                                     icon="fa-file-o" string="Generate XML"
-                                    help="Generate XML"/>
+                                    help="Generate XML" groups="servoo_shipping.shipping_group_user"/>
 
                         </div>
                         <group>
@@ -298,6 +303,21 @@
             </field>
         </record>
         <menuitem id="shipping_file_menu" parent="servoo_shipping.shipping_menu" action="action_shipping_file" />
+
+        <record id="action_shipping_file_to_invoice" model="ir.actions.act_window">
+            <field name="name">Shipping Files</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.shipping.file</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    There is no shipping file to invoice!
+                </p>
+            </field>
+        </record>
+         <menuitem id="shipping_file_invoice_menu" action="servoo_shipping.action_shipping_file_to_invoice" parent="servoo_shipping.shipping_invoice_menu" />
 
         <record model="ir.ui.view" id="view_shipping_dangerous_good_form">
             <field name="name">view.shipping.dangerous.good.form</field>
