--- a/servoo_transit/views/transit_order_view.xml
+++ b/servoo_transit/views/transit_order_view.xml
@@ -28,13 +28,18 @@
             <field name="arch" type="xml">
                 <form string="Transit Order">
                     <header>
-                        <button name="action_open" states="draft" type="object" string="Validate"/>
-                        <button name="action_done" states="open" type="object" string="Done"/>
+                        <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_transit.transit_group_user"/>
+                        <button name="action_done" states="open" type="object" string="Done" groups="servoo_transit.transit_group_user"/>
                         <button name="create_invoices" string="Create Invoice"
-                        type="object" class="btn-primary" data-hotkey="q"
+                        type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
                         attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','&gt;=',1)]}"/>
+
+                        <button name="create_invoices" string="Create Invoice"
+                        type="object" data-hotkey="q" groups="account.group_account_invoice"
+                        attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','=',0)]}"/>
+
                         <button name="action_draft" states="cancel" type="object" string="Open" groups="servoo_transit.transit_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel"/>
+                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_transit.transit_group_user"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
@@ -179,6 +184,20 @@
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create a new transit order!
+                </p>
+            </field>
+        </record>
+
+        <record id="action_transit_order_to_invoice" model="ir.actions.act_window">
+            <field name="name">Transit Orders</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.transit.order</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    There is no transit order to invoice!
                 </p>
             </field>
         </record>
